fixed fonts for use on safari

--- a/_sass/hydeout/_base.scss
+++ b/_sass/hydeout/_base.scss
@@ -16,6 +16,8 @@ body {
 
 html {
   font-family: $root-font-family;
+  font-weight: 400;
+  font-style: normal;
   font-size: $root-font-size;
   line-height: $root-line-height;
 
