--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -44,7 +44,8 @@ body {
 
   .site-title {
     font-family: 'Raleway', sans-serif;
-    font-weight: normal;
+    font-weight: 600;
+    font-style: italic;
     font-size: 2.75rem;
     color: rgb(0,0,0);
     vertical-align: baseline;
@@ -365,6 +366,8 @@ body {
 #sidebar a {
   color: #C6C6C6;
   font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-style: italic;
 
 /* USE THESE TO CHANGE THE COLOR OF YOUR SOCIAL ICON LINKS */
 
